
buildscript {

}


plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}


allprojects {
    // Gradle이 빌드시 사용할 언어 셋팅
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    group = 'com.jabiseo'
    version = '0.0.1-SNAPSHOT'

    // 컴파일러
    sourceCompatibility = '17'
    targetCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    // 서브 모듈 공통 의존성
    dependencies {

        //  롬복 셋팅
        implementation "org.projectlombok:lombok"
        annotationProcessor "org.projectlombok:lombok"

        testImplementation "org.projectlombok:lombok"
        testAnnotationProcessor "org.projectlombok:lombok"

        //junit 공통 셋팅
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }


    // 모든 서브 모듈에서 Junit을 사용하기 위한 설정
    test {
        useJUnitPlatform()
    }

}
